--- a/config/stylesheets/hints.css
+++ b/config/stylesheets/hints.css
@@ -7,4 +7,5 @@
     font-weight: bold !important;
     line-height: normal !important;
     padding: 1px 2px !important;
+    width: auto !important;
 }
