--- a/config/stylesheets/hints.css
+++ b/config/stylesheets/hints.css
@@ -1,11 +1,11 @@
 .__titanium_hint {
+    all: initial;
     background: #fff200 !important;
     border: 1px solid #ccc200 !important;
-    color: black !important;
     font-family: "DejaVu Sans Mono", FreeMono, "Liberation Mono", "Lucida Console", monospace !important;
     font-size: small !important;
     font-weight: bold !important;
-    line-height: normal !important;
+    max-width: none !important;
     padding: 1px 2px !important;
     width: auto !important;
 }
